<resources>
    <string name="app_name">Mon Staffing</string>
    <string name="mot_cl">Mot Clé</string>
    <string name="rentrez_un_mot_cl">Rentrez un mot clé</string>
    <string name="ville">Ville</string>
    <string name="hint_choix_ville">Cliquez pour choisir une ville</string>
    <string name="activity_title_applyOfferActivity">Postuler à une offre</string>
    <string name="apply">Postuler</string>
    <string name="activity_title_filtre">Filtre</string>
    <string name="vertical">Vertical</string>
    <string name="poste">Poste</string>
    <string name="competences">Compétences</string>
    <string name="descriptif">Descriptif</string>
    <string name="lieu">Lieu</string>
    <string name="date_debut_de_mission">Date début de mission</string>
    <string name="contact">Contact</string>
    <string name="preview_default_value">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean placerat mattis elit ut iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.</string>
    <string name="message_apply">Ecrire un message pour postuler</string>
    <string name="boutonValidation">Valider</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="boutonFiltre">Filtrer</string>
    <string name="activity_title_login">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cgi">CGI</string>
    <string name="loginFailed">Echec de connexion</string>
    <string name="quitter_application">Quitter l\'application</string>
    <string name="quitter_application_long">Voulez-vous vraiment quitter l\'application ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="apply_offer">Postuler offre CGI</string>
</resources>
