<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cgi.formation.monstaffing.activities.DisplayActivity">

    <Button
        android:id="@+id/buttonFiltre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/boutonFiltre" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/colorCGIAccent"
        android:padding="5dp">

        <TextView
            android:id="@+id/client"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vertical"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/poste"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lieu"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <!--<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->


        <ListView
            android:id="@+id/missionListId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorCGIAccent"
            android:dividerHeight="1dp"/>

    <!--</android.support.v4.widget.SwipeRefreshLayout>-->


</LinearLayout>
